--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+	<link href="css/myresume.css" rel="stylesheet">
 
   </head>
 
@@ -74,36 +75,14 @@
           <p class="mb-5">目前就讀世新大學資訊傳播學系，非常喜歡這類科系，可以學到非常多專業項目，我也是一位棒球選手，三級棒球資歷非常豐富，國小國中都是台北市代表隊，高中也是宜蘭縣代表隊，平時也喜歡彈吉他，也參加過大大小小的比賽，表演經歷非常豐富，但我更喜歡在音樂裡找尋自己</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/jason.yung.756">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+            
             </li>
           </ul>
         </div>
@@ -164,28 +143,25 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+         <h2 class="mb-5"><span class="text-primary">學歷</span>Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">世新大學</h3>
-              <div class="subheading mb-3"></div>
-              <div>資訊傳播學系</div>
-              <p></p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2017 -MAY 2021 </span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">中道中學</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p></p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2013- May 2016</span>
+		  <div class="timeline">
+			<div class="timeline-block timeline-left">
+			  <div class="timeline-content">
+			    <h3>Sept.  ~ Jan. 2017</h3>
+				<p><span class="text-primary">世新大學</span>
+			  </div>
+			</div>
+			<div class="timeline-block timeline-right">
+			  <div class="timeline-content">
+			    <h3>Sept. 2013 ~ Jun. 2016</h3>
+				<p><span class="text-primary">中道中學</span>
+			  </div>
+			</div>
+			<div class="timeline-block timeline-left">
+			  <div class="timeline-content">
+			    <h3>Sept. 2010 ~ Jun. 2013</h3>
+				<p><span class="text-primary">長安國中</span>
             </div>
           </div>
 
@@ -254,8 +230,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>我的興趣是彈吉他，因為音樂有奇妙的力量，總是能讓我紓解壓力，音樂也能帶給我身旁的人歡樂，所以我非常喜歡彈吉他，除此之外也喜歡攝影，攝影能讓美好的事物變成永恆所以我非常喜歡記錄身邊的每一刻。</p>
+          <p class="mb-0">我最喜歡的還是棒球，我只能說它不只是一顆棒球，它對我來說是一種態度，所以我想我這一輩子都不會離開棒球</p>
         </div>
       </section>
 
