--- a/index.html
+++ b/index.html
@@ -237,37 +237,82 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
+          <h2 class="mb-5"><span class="text-primary">選手生涯</span></h2>
+		  <div id="accordion">
+
+			<div class="card">
+			  <div class="card-header">
+				<a class="card-link" data-toggle="collapse" href="#collapseOne">
+				  2011年~
+				</a>
+			  </div>
+			  <div id="collapseOne" class="collapse show" data-parent="#accordion">
+				<div class="card-body">
+				  <table class="table table-hover">
+					<thead>
+					  <tr>
+						<th>年份</th>
+						<th>選手</th>
+						<th>代表隊伍</th>
+						<th>比賽名稱</th>
+						<th>相關新聞</th>
+						<th>特別備注</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+						<td>2017</td>
+						<td>楊朋諺</td>
+						<td>宜蘭縣代表隊</td>
+						<td>玉山盃全國青棒錦標賽</td>
+						<td></td>
+						<td></td>
+					  </tr>
+					  <tr>
+						<td>2016</td>
+						<td>楊朋諺</td>
+						<td>中道中學青棒隊</td>
+						</td>中道中學楊氏兄弟火力兇猛</td>
+						<td>木棒聯賽</td>
+						<td></td>
+						<td></td>
+					  </tr>
+					  <tr>
+						<td>2015</td>
+						<td>楊朋諺</td>
+						<td>中道中學青棒隊</td>
+						<td>木棒聯賽</td>
+						<td>http://www.tsna.com.tw/index.php?q=node/59257
+						</td>
+						<td></td>
+					  </tr>
+					  <tr>
+						<t
+					  </tr>
+					  <tr>
+						<td>2014</td>
+						<td>楊朋諺</td>
+						<td>台北市代表隊</td>
+						<td>華南金控盃</td>
+						<td></td>
+						<td></td>
+					  </tr>
+					  <tr>
+						<td
+					  </tr>
+					</tbody>
+				  </table>
+				</div>
+			  
+			</div>
+
+			
+					  </tr>
+					</tbody>
+				  </table>
+				</div>
+
+		</div>
       </section>
 
     </div>
