--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#dream">Dreams</a>
+		  </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#life">life</a>
+		
         </ul>
       </div>
     </nav>
@@ -282,10 +288,23 @@
 					</tbody>
 				  </table>
 				</div>
-			  
 			</div>
-
-			
+		</div>
+	</div>
+    </div>
+	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dream">
+        <div class="my-auto">
+          <h2 class="mb-5"><span class="text-primary">我的夢想</span></h2>
+		  <p>我的夢想是成為一名唱跳歌手，能夠跟周杰倫還有羅志祥抗衡的人，成為蔡依林的舞伴，我知道這個夢想離我還很遙遠
+		  不過人是有無限的可能的，只要我相信自己，就也能讓別人也相信我，我的人生我不想留下遺憾</p>
+</div>
+    </div>
+	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life">
+        <div class="my-auto">
+          <h2 class="mb-5"><span class="text-primary">我的生活</span></h2>
+		  <p>關於我的生活我只想快樂瀟灑的活著，因為人生就這麼一次，就該快樂的活著
+		  </p>
+			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
 					  </tr>
 					</tbody>
 				  </table>
