--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
           <h2 class="mb-5">Interests</h2>
           <p>我的興趣是彈吉他，因為音樂有奇妙的力量，總是能讓我紓解壓力，音樂也能帶給我身旁的人歡樂，所以我非常喜歡彈吉他，除此之外也喜歡攝影，攝影能讓美好的事物變成永恆所以我非常喜歡記錄身邊的每一刻。</p>
           <p class="mb-0">我最喜歡的還是棒球，我只能說它不只是一顆棒球，它對我來說是一種態度，所以我想我這一輩子都不會離開棒球</p>
+		  <img src="20423936_1122995547801276_1826259519031591224_o.jpg"</a>
         </div>
       </section>
 
@@ -239,7 +240,7 @@
 						<th>年份</th>
 						<th>選手</th>
 						<th>代表隊伍</th>
-						<th>比賽名稱</th>
+						<th>比賽名次</th>
 						<th>相關新聞</th>
 						<th>特別備注</th>
 					  </tr>
@@ -249,7 +250,7 @@
 						<td>2017</td>
 						<td>楊朋諺</td>
 						<td>宜蘭縣代表隊</td>
-						<td>玉山盃全國青棒錦標賽</td>
+						<td>玉山盃全國青棒錦標賽十二強</td>
 						<td></td>
 						<td></td>
 					  </tr>
@@ -258,7 +259,7 @@
 						<td>楊朋諺</td>
 						<td>中道中學青棒隊</td>
 						</td>中道中學楊氏兄弟火力兇猛</td>
-						<td>木棒聯賽</td>
+						<td>木棒聯賽四強</td>
 						<td></td>
 						<td></td>
 					  </tr>
@@ -266,7 +267,7 @@
 						<td>2015</td>
 						<td>楊朋諺</td>
 						<td>中道中學青棒隊</td>
-						<td>木棒聯賽</td>
+						<td>木棒聯賽八強</td>
 						<td>http://www.tsna.com.tw/index.php?q=node/59257
 						</td>
 						<td></td>
@@ -278,7 +279,7 @@
 						<td>2014</td>
 						<td>楊朋諺</td>
 						<td>台北市代表隊</td>
-						<td>華南金控盃</td>
+						<td>華南金控盃季軍</td>
 						<td></td>
 						<td></td>
 					  </tr>
@@ -297,6 +298,7 @@
           <h2 class="mb-5"><span class="text-primary">我的夢想</span></h2>
 		  <p>我的夢想是成為一名唱跳歌手，能夠跟周杰倫還有羅志祥抗衡的人，成為蔡依林的舞伴，我知道這個夢想離我還很遙遠
 		  不過人是有無限的可能的，只要我相信自己，就也能讓別人也相信我，我的人生我不想留下遺憾</p>
+		  <img src="2v3jvsl5qgr.jpg"</a>
 </div>
     </div>
 	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="life">
